Altera para UUID os ids do item. Corrige os metodos e retornos para a alteracao do UUID.